--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,6 +7,7 @@
     <title>Vite + React</title>
   </head>
   <body>
+    <p>Hello its me</p>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
